@@ -1,7 +1,7 @@
 SUBDIRS = src
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure
 
-pkgdata_DATA = lemonlauncher.conf.sample games.conf.sample keycodes.txt \
+pkgdata_DATA = lemonlauncher.conf.sample keycodes.txt \
 theme.conf.sample grey-theme.tar.gz blue-theme.tar.gz
 
 EXTRA_DIST = $(pkgdata_DATA) VeraBd.ttf
