@@ -1,3 +1,10 @@
+ Jan 03/2008
+=======================
++ using new thread to launch game.
+  this lets the main loop of lemon launcher continue to run and removes the
+  need for queue flushing and screen minimizing.
++ made favorite view the default view
+
  Dec 27/2007
 =======================
 + added 3 'view' states: favorites, most played, and genre view
